# nb-to-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sample.py
nb_to_py/: cell.py  converter.py  notebook.py  refactoring.py
tests/unit/: sample.ipynb  test_converter.py
