[tool.poetry]
name = "nb-to-py"
version = "0.1.0"
description = ""
authors = ["Luca Cassani"]
readme = "README.md"
packages = [{include = "nb_to_py"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
